worked on pin overlap issue

--- a/src/pages/homePage.css
+++ b/src/pages/homePage.css
@@ -6,6 +6,9 @@
   justify-content: space-around;
   
 }
+.popup{
+  z-index: 80;
+}
 
 .label {
   width: max-content;
